Fixed iPad Pro media queries clashing with desktop resolutions, fixed images on smaller common screen widths (1280x539)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -610,45 +610,6 @@ tr:last-child td:last-child { border-bottom-right-radius: 10px; }*/
   background-position: 0% 0%;
 }
 
-@media screen and ( max-width: 1280px ) {
-    video {
-      -webkit-transform: scale(1.0, 1.0); 
-      -moz-transform: scale(1.0, 1.0);
-      transform: scale(1.0, 1.0);
-      transform: scale(1.0, 1.0);
-    }
-    h1 {
-      font-size: 30px;
-      margin-bottom: 10px !important;
-      margin-top: 10px !important;
-    }
-    .select, .select-promo {
-      font-size: 14px;
-      margin-bottom: 9px;
-      margin-top: 0px;
-    }
-    dt {
-      line-height: 21px;
-    }
-    p, dl {
-      font-size: 17px;
-    }
-    .img-circle {
-      width: 65px;
-      height: 65px;
-      margin-bottom: 5px;
-    }
-    #map-canvas {
-      margin-top: 15px;
-      height: 250px;
-    }
-    .navbar-nav > li {
-      top: 20vh;
-    }
-    .carousel-caption {
-      bottom: 10px;
-    }
-}
 @media screen and ( min-width: 1281px ) {
     video {
       -webkit-transform: scale(1.65, 1.65); 
@@ -723,6 +684,12 @@ tr:last-child td:last-child { border-bottom-right-radius: 10px; }*/
     .club-banana {
       transform: translate(-10%,-15%) scale(1.3, 1.3);
     }
+    .navbar-nav > li {
+      top: 15vh;
+    }
+    .carousel-caption {
+      bottom: 0px;
+    }
 }
 
 @media (min-width: 1025px) {
@@ -734,8 +701,54 @@ tr:last-child td:last-child { border-bottom-right-radius: 10px; }*/
   video {
     display: inline-block;
   }
-
 }
+
+@media screen and ( width: 1280px ) and ( max-height: 560px ) {
+    video {
+      -webkit-transform: scale(1.0, 1.0); 
+      -moz-transform: scale(1.0, 1.0);
+      transform: scale(1.0, 1.0);
+      transform: scale(1.0, 1.0);
+    }
+    h1 {
+      font-size: 30px;
+      margin-bottom: 10px !important;
+      margin-top: 10px !important;
+    }
+    .select, .select-promo {
+      font-size: 14px;
+      margin-bottom: 9px;
+      margin-top: 0px;
+    }
+    dt {
+      line-height: 21px;
+    }
+    p, dl {
+      font-size: 17px;
+    }
+    .img-circle {
+      width: 65px;
+      height: 65px;
+      margin-bottom: 5px;
+    }
+    #map-canvas {
+      margin-top: 15px;
+      height: 250px;
+    }
+    .navbar-nav > li {
+      top: 20vh;
+    }
+    .carousel-caption {
+      bottom: 10px;
+    }
+    .club-membership {
+      max-width: 220px !important;
+    }
+    .text-centered .col-xs-4 .contact p {
+      margin-bottom: 2px;
+    }
+}
+
 .caption-block {
   width: 100%;
   height: 100%;
@@ -1561,6 +1574,9 @@ a:focus, a:hover {
   }
   dt {
     font-size: 15px;
+  }
+  .club-image {
+    margin-top: 5px;
   }
 }
 @media screen and ( max-width: 359px ) { /*for iPhone 5 and 5S*/
